results/01_service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-srv
spec:
  selector:
    app: test
  ports:
    - port: 3233
      targetPort: 3233
  type: NodePort
