results/02_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.org/client-max-body-size: "5024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "5024m"
  labels:
    app: test
spec:
  tls:
    - hosts:
        - test
      secretName: test
  rules:
    - host: test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-srv
                port:
                  number: 3233
